k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api
  namespace: payment-api
  labels:
    app: payment-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: payment-api
